--- a/secrets.env
+++ b/secrets.env
@@ -1,4 +1,4 @@
-COUNTRY_CODES = 'dunant@redcross.nl'
-ADMIN_LOGIN = 'PHL'
+COUNTRY_CODES = '63'
+ADMIN_LOGIN = 'dunant@redcross.nl'
 IBF_PASSWORD='https://ibf-demo.510.global/api/'
 IBF_URL =password
