--- a/secrets.env
+++ b/secrets.env
@@ -1,4 +1,4 @@
 COUNTRY_CODES = '63'
 ADMIN_LOGIN = 'dunant@redcross.nl'
-IBF_PASSWORD='https://ibf-demo.510.global/api/'
-IBF_URL =password
+IBF_PASSWORD='password'
+IBF_URL ='https://ibf-demo.510.global/api/'
